# STRATHEX

./: .gitattributes  .gitignore  CLAUDE.md  CONSENT.md  LICENSE  MainProgramV5_2.py  PORTFOLIO_PUBLISH_CHECKLIST.md  README.md  config.py  explanation_system_functions.py  pyproject.toml  woodchopping.xlsx  woodchopping_clean.xlsx
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CASE_STUDY.md  HANDICAP_SYSTEM_EXPLAINED.md  INDEX.md  ML_AUDIT_REPORT.md  PROJECT_STRUCTURE.md  PROMPT_CHANGELOG.md  PROMPT_ENGINEERING_GUIDELINES.md  SYSTEM_STATUS.md
docs/archive/: BASELINE_V2_IMPLEMENTATION_SUMMARY.md  BASELINE_V2_VALIDATION_REPORT.md  OPTION_5_10_IMPLEMENTATION.md  PROMPT_UPDATE_SUMMARY_2026-01-12.md  Tournament and Personnel Changes.md  V5.2_UI_IMPROVEMENTS.md
docs/solutions/: README.md
docs/solutions/architecture-decisions/: qaa-scaling-removal.md  strathmark-extraction-v6.md
docs/solutions/best-practices/: judge-ui-simplicity-principle.md  prompt-feature-parity.md
docs/solutions/build-errors/: hatch-allow-direct-references-2026-04-06.md
docs/solutions/data-integrity/: excel-results-schema-column-mismatch.md  sparse-competitor-data-fallback.md  wood-quality-scale-inversion.md
docs/solutions/runtime-errors/: numpy-polyfit-dlascls-sparse-data.md  unicode-ascii-windows-terminal.md
docs/solutions/test-failures/: ml-feature-count-mismatch.md  pytest-collection-ollama-markers-2026-04-06.md
docs/solutions/workflow-issues/: versioned-wiki-source-2026-04-21.md
scripts/: analyze_backtesting_outliers.py  data_analysis_for_new_baseline.py
tests/: conftest.py  test_baseline_hybrid.py  test_both_events.py  test_check_my_work.py  test_monte_carlo_stats.py  test_stand_optimization.py  test_uh_predictions.py
tests/validation/: test_baseline_v2_backtesting.py  test_baseline_v2_convergence.py  test_baseline_v2_fairness.py  test_baseline_v2_realistic_backtesting.py  test_baseline_v2_validation.py  test_enhanced_features.py  test_model_comparison.py  test_xgboost_upgrade.py
wiki/: AAA-and-QAA-Rules-Compliance.md  Architecture.md  Bracket-Tournaments.md  Championship-Simulator.md  Data-Model.md  Development.md  Ecosystem.md  FAQ.md  Handicap-System-Explained.md  Home.md  Monte-Carlo-Fairness.md  Multi-Event-Tournaments.md  Prediction-Methods.md  Quick-Start.md  README.md  Tournament-Workflow.md  Troubleshooting.md  Version-History.md  _Footer.md  _Sidebar.md  publish.sh
woodchopping/: __init__.py  strathmark_adapter.py
woodchopping/analytics/: __init__.py  competitor_profiling.py  performance_history.py  prediction_accuracy.py
woodchopping/data/: __init__.py  excel_io.py  preprocessing.py  store_registry.py  validation.py
woodchopping/handicaps/: __init__.py  calculator.py
woodchopping/predictions/: __init__.py  ai_predictor.py  baseline.py  calibration.py  check_my_work.py  diameter_diagnostic.py  diameter_scaling.py  lightgbm_model.py  llm.py  ml_model.py  prediction_aggregator.py  production.py  randomforest_model.py  ridge_model.py  stacking_ensemble.py
woodchopping/simulation/: __init__.py  fairness.py  monte_carlo.py  visualization.py
woodchopping/ui/: __init__.py  adjustment_tracking.py  bracket_ui.py  championship_simulator.py  competitor_dashboard.py  competitor_ui.py  entry_fee_tracker.py  error_display.py  handicap_ui.py  history_entry.py  multi_event_ui.py  payout_ui.py  personnel_ui.py  schedule_printout.py  scratch_management.py  tournament_status.py  tournament_ui.py  v52_helpers.py  wood_ui.py
