[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strathex"
version = "6.0.0"
description = "AI-Powered Woodchopping Handicap Calculator and Tournament Management System"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Alex Kaper" }]
dependencies = [
    "pandas",
    "numpy",
    "openpyxl",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "matplotlib",
    "requests",
    "strathmark @ git+https://github.com/SquirmyWormy275/STRATHMARK.git@main",
]

[project.optional-dependencies]
llm = [
    "requests",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["woodchopping"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "ollama: tests that require a local Ollama instance (skipped in CI)",
    "strathmark: tests that exercise the strathmark engine directly",
]

[tool.coverage.run]
source = ["woodchopping"]
omit = ["tests/*"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E501 (line too long) is reported but we tolerate it pragmatically — many CLI
# print/help strings are intentionally long. Bumping line-length to 120 catches
# the worst offenders without forcing widespread reflowing of judge-facing text.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# __init__.py files commonly re-export symbols.
"__init__.py" = ["F401"]
# Test scripts and benchmark scripts frequently manipulate sys.path before
# importing project modules — E402 is expected.
"tests/**/*.py" = ["E402", "F401", "F841"]
# explanation_system_functions.py is a long judge-facing literal text module.
"explanation_system_functions.py" = ["F401", "F841"]
# Optional ML backends (xgboost, lightgbm, sklearn) are imported inside
# try/except ImportError blocks as availability sentinels. Ruff cannot tell
# they gate downstream code paths.
"woodchopping/predictions/ml_model.py" = ["F401"]
"woodchopping/predictions/lightgbm_model.py" = ["F401"]
"woodchopping/predictions/randomforest_model.py" = ["F401"]
"woodchopping/predictions/ridge_model.py" = ["F401"]
"woodchopping/predictions/stacking_ensemble.py" = ["F401"]
"woodchopping/predictions/calibration.py" = ["F401"]
